--- a/src/ex11_html-css-advanced/task-03.css
+++ b/src/ex11_html-css-advanced/task-03.css
@@ -1,63 +1,117 @@
-form {
-  display: grid;
-  grid-template-rows: 30px 30px;
-  grid-template-columns: 70px 200px;
-  grid-gap: 10px;
-}
+/*      Common styles     */
 
-.row {
-  grid-row: 1 / 2;
-  grid-column: 1 / 3;
-}
-
-.col1 {
-  grid-row: 2 / 3;
-  grid-column: 1 / 2;
-}
-
-.col2 {
-  grid-row: 2 / 3;
-  grid-column: 2 / 3;
-}
-
-.field {
-  position: relative;
-  font-family: Arial;
-  font-weight: bold;
-  display: inline-block;
-}
-
-label {
-  padding-left: 2px;
-  position: absolute;
-  left: 0;
-  top: 0;
-  transition: all .15s linear;
-  color: #999;
-  font-size: 10px;
-}
-
-input {
+html {
+  height: 100%;
   width: 100%;
-  margin-top: 10px;
-  border: 1px solid #999;
-  padding: 3px 2px;
 }
 
-input:invalid + label {
-  top: 10px;
-  opacity: 0;
+body {
+  margin: 0;
+  background: #0079BF;
+  color: #24292e;
+  font-family: 'Roboto', sans-serif;
+  font-size: 18px;
+  line-height: 21px;
+  position: relative;
+  min-height: 100%;
+  height: 100%;
 }
 
-input:valid + label {
-  opacity: 1;
-  top: -2px;
+a {
+  text-decoration: none;
+}
+a:visited {
+  color: inherit;
 }
 
-input:focus {
-  outline: none;
+ul {
+  list-style-type: none;
 }
 
-input:focus + label {
-  color: #33A;
+/*      Header      */
+
+header {
+  background-color: #0067A3;
+  display: flex;
+  justify-content: space-between;
+  color: #FFFFFF;
+}
+
+.logo {
+  font-size: 28px;
+  line-height: 33px;
+  padding: 5px 15px;
+  display: flex;
+  align-items: flex-end;
+}
+
+.logo__link {
+  margin-left: 10px;
+}
+
+.toolbar {
+  display: flex;
+  align-items: center;
+  color: #000000;
+}
+
+.toolbar__create-list {
+  border-radius: 5px;
+  background: #FFFFFF;
+  padding: 5px 10px;
+}
+
+.toolbar__create-list svg {
+  vertical-align: sub;
+}
+.toolbar__create-list span {
+  padding: 5px 10px;
+}
+
+.toolbar__user-menu {
+  margin-left: 50px;
+  margin-right: 20px;
+  display: flex;
+  align-items: center;
+}
+
+.toolbar__user-avatar {
+  width: 40px;
+  height: 40px;
+  background: #FFFFFF;
+  text-align: center;
+  border-radius: 50%;
+}
+
+.toolbar__user-avatar svg {
+  position: relative;
+  top: 5px;
+}
+
+.toolbar__user-arrow {
+  padding: 10px;
+}
+
+/*      Footer      */
+
+footer {
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  display: flex;
+  justify-content: space-between;
+  color: #FFFFFF;
+  background: #0067A3;
+}
+
+.footer__tasks {
+  margin: 0;
+  display: flex;
+  align-items: center;
+}
+
+.footer__tasks-item,
+.footer__about {
+  margin: 0;
+  padding: 17px 35px;
 }
