--- a/src/ex9_html-css-fundamentals-part1/task-03.css
+++ b/src/ex9_html-css-fundamentals-part1/task-03.css
@@ -1,7 +1,7 @@
-.solution {
+.button-wrap {
+  width: 250px;
   position: relative;
-  margin: 0 30px;
-  padding: 20px 7px;
+  padding: 7px;
   background-color: #cccccc;
   border-radius: 15px;
   border: 1px solid white;
@@ -9,6 +9,7 @@
 }
 
 .button {
+  width: 100%;
   position: relative;
   text-transform: uppercase;
   text-decoration: none;
@@ -17,7 +18,7 @@
   color: #545454;
   font-weight: 900;
   font-size: 24px;
-  padding: 15px;
+  padding: 12px 18px;
   border-radius: 10px;
   background: linear-gradient(#dedede 35%,#b4b4b5 60%);
   box-shadow: 0 1px 3px 1px #545454;
