--- a/src/ex9_html-css-fundamentals-part1/task.css
+++ b/src/ex9_html-css-fundamentals-part1/task.css
@@ -3,20 +3,11 @@
   margin: 0 auto;
 }
 
-.header {
-  margin-bottom: 0;
-}
-
-.notice {
-  margin: 0;
-  color: #ff0400;
-}
-
 .form {
   font-size: 15px;
 }
 
-.form__items {
+.form__list {
   list-style: none;
 }
 
@@ -30,14 +21,23 @@
   margin-bottom: 10px;
 }
 
-.form__item-label {
+.form__header {
+  margin-bottom: 0;
+}
+
+.form__notice {
+  margin: 0;
+  color: #ff0400;
+}
+
+.form__label {
   padding: 10px 0;
   position: absolute;
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.form__item-field,
-.form__item-area  {
+.form__input,
+.form__textarea  {
   margin-left: 100px;
   border: 1px solid black;
   border-radius: 5px;
@@ -45,21 +45,21 @@
   outline: none;
 }
 
-.form__item-field {
+.form__input {
   font-size: 15px;
   width: 40%;
 }
 
-.form__item-field::placeholder {
+.form__input::placeholder {
   font-size: 15px;
   opacity: 0.5;
 }
 
-.form__item-area {
+.form__textarea {
   width: 45%;
 }
 
-.form__item-button {
+.form__button {
   background: #eeeeee;
   margin-left: 70px;
   border: 1px solid gray;
@@ -69,7 +69,7 @@
   font-size: 13px;
 }
 
-.form__warning {
+.form--warning {
   position: relative;
   left: 40px;
   color: white;
@@ -79,7 +79,7 @@
   font-weight: bold;
 }
 
-.form__warning::after {
+.form--warning::after {
   content: ''; 
   position: absolute;
   left: -13px;
@@ -88,6 +88,6 @@
   border-right: 7px solid #cf2727;
  }
 
- .form__item-field:valid + .form__warning {
+.form__input:valid + .form--warning {
   opacity: 0;
 }
