--- a/src/ex11_html-css-advanced/task-03.css
+++ b/src/ex11_html-css-advanced/task-03.css
@@ -20,9 +20,6 @@ body {
 a {
   text-decoration: none;
 }
-a:visited {
-  color: inherit;
-}
 
 ul {
   list-style-type: none;
@@ -30,7 +27,7 @@ ul {
 
 /*      Header      */
 
-header {
+.header {
   background-color: #0067A3;
   display: flex;
   justify-content: space-between;
@@ -42,11 +39,16 @@ header {
   line-height: 33px;
   padding: 5px 15px;
   display: flex;
-  align-items: flex-end;
+  align-items: center;
 }
 
 .logo__link {
   margin-left: 10px;
+  color: #FFFFFF;
+}
+
+.logo__link:visited {
+  color: #FFFFFF;
 }
 
 .toolbar {
@@ -55,27 +57,29 @@ header {
   color: #000000;
 }
 
-.toolbar__create-list {
+.toolbar__button {
+  display: flex;
+  align-items: center;
   border-radius: 5px;
   background: #FFFFFF;
+  padding: 2px 10px;
+  font-family: 'Roboto', sans-serif;
+  font-size: 18px;
+  line-height: 21px;
+}
+
+.toolbar__button span {
   padding: 5px 10px;
 }
 
-.toolbar__create-list svg {
-  vertical-align: sub;
-}
-.toolbar__create-list span {
-  padding: 5px 10px;
-}
-
-.toolbar__user-menu {
+.menu {
   margin-left: 50px;
   margin-right: 20px;
   display: flex;
   align-items: center;
 }
 
-.toolbar__user-avatar {
+.avatar {
   width: 40px;
   height: 40px;
   background: #FFFFFF;
@@ -83,18 +87,18 @@ header {
   border-radius: 50%;
 }
 
-.toolbar__user-avatar svg {
+.avatar img {
   position: relative;
   top: 5px;
 }
 
-.toolbar__user-arrow {
+.arrow {
   padding: 10px;
 }
 
 /*      Footer      */
 
-footer {
+.footer {
   width: 100%;
   position: absolute;
   bottom: 0;
@@ -104,14 +108,14 @@ footer {
   background: #0067A3;
 }
 
-.footer__tasks {
+.state {
   margin: 0;
   display: flex;
   align-items: center;
 }
 
-.footer__tasks-item,
-.footer__about {
+.state__item,
+.about {
   margin: 0;
   padding: 17px 35px;
 }
