--- a/src/ex11_html-css-advanced/task-02.css
+++ b/src/ex11_html-css-advanced/task-02.css
@@ -1,63 +1,58 @@
-form {
-  display: grid;
-  grid-template-rows: 30px 30px;
-  grid-template-columns: 70px 200px;
-  grid-gap: 10px;
+.form {
+  width: 300px;
 }
 
-.row {
-  grid-row: 1 / 2;
-  grid-column: 1 / 3;
-}
-
-.col1 {
-  grid-row: 2 / 3;
-  grid-column: 1 / 2;
-}
-
-.col2 {
-  grid-row: 2 / 3;
-  grid-column: 2 / 3;
-}
-
-.field {
+.form__row {
+  width: 100%;
   position: relative;
   font-family: Arial;
   font-weight: bold;
-  display: inline-block;
 }
 
-label {
+.form__row:last-child {
+  display: flex;
+}
+
+.form__col {
+  position: relative;
+  display: inline;
+}
+
+.form__col:last-child {
+  min-width: 70%;
+}
+
+.form__label {
   padding-left: 2px;
   position: absolute;
   left: 0;
   top: 0;
-  transition: all .15s linear;
+  transition: all 150ms linear;
   color: #999;
   font-size: 10px;
 }
 
-input {
+.form__input {
   width: 100%;
-  margin-top: 10px;
+  margin-top: 15px;
   border: 1px solid #999;
   padding: 3px 2px;
 }
 
-input:invalid + label {
-  top: 10px;
+.form__input:invalid + .form__label {
+  top: 15px;
   opacity: 0;
 }
 
-input:valid + label {
+.form__input:valid + .form__label {
   opacity: 1;
-  top: -2px;
+  top: 3px;
 }
 
-input:focus {
+.form__input:focus {
   outline: none;
 }
 
-input:focus + label {
+.form__input:focus + .form__label {
   color: #33A;
 }
