--- a/src/ex13_js_events/task.css
+++ b/src/ex13_js_events/task.css
@@ -1,20 +1,18 @@
-html {
+html,
+body {
+  margin: 0;
   height: 100%;
   width: 100%;
 }
 
-body {
+.wrapper {
   margin: 0;
   background: #0079BF;
   color: #24292e;
   font-family: 'Roboto', sans-serif;
   font-size: 18px;
   line-height: 21px;
-  position: relative;
-  min-height: 100%;
-  max-height: 100%;
   height: 100%;
-  width: 100%;
   display: flex;
   flex-direction: column;
 }
@@ -48,12 +46,10 @@ ul {
   display: flex;
   justify-content: space-between;
   color: #FFFFFF;
-  flex: 0 0 auto;
 }
 
 .logo {
   font-size: 28px;
-  line-height: 33px;
   padding: 5px 15px;
   display: flex;
   align-items: center;
@@ -73,7 +69,6 @@ ul {
 .toolbar {
   display: flex;
   align-items: center;
-  position: relative;
 }
 
 .toolbar__button {
@@ -84,7 +79,6 @@ ul {
   padding: 2px 10px;
   font-family: 'Roboto', sans-serif;
   font-size: 18px;
-  line-height: 21px;
 }
 
 .toolbar__button span {
@@ -122,6 +116,7 @@ ul {
   background: #EBECF0;
   border-radius: 10px;
   box-shadow: 0 5px 25px 10px #0067A3;
+  z-index: 1;
 }
 
 .menu__list {
@@ -137,6 +132,7 @@ ul {
 
 .menu__item:hover {
   background: #FFFFFF;
+  cursor: pointer;
 }
 
 .menu__link:visited {
@@ -145,23 +141,19 @@ ul {
 
 .main {
   height: 100%;
-  width: 100%;
   overflow: auto;
   padding: 20px;
   display: flex;
   align-items: flex-start;
-  box-sizing: border-box;
 }
 
 .card {
   box-sizing: border-box;
-  min-width: 260px;
   width: 260px;
   color: #000000;
   background: #EBECF0;
   border-radius: 10px;
-  padding: 12px;
-  padding-right: 0;
+  padding: 12px 0 12px 12px;
   margin-right: 25px;
   overflow-y: auto;
   display: flex;
@@ -179,14 +171,11 @@ ul {
 }
 
 .container {
-  height: 100%;
-}
-
-.card__list {
-  max-height: 100%;
+  overflow-y: auto;
 }
 
 .card__item {
+  word-break: break-word;
   background: #FFFFFF;
   border-radius: 5px;
   padding: 10px;
@@ -195,15 +184,14 @@ ul {
 }
 
 .wrap {
-  margin-bottom: 15px;
   margin-right: 12px;
+  border-radius: 5px;
+  background: #FFFFFF;
 }
 
 .input {
-  background: #FFFFFF;
   width: 100%;
   padding: 10px;
-  border-radius: 5px;
   border: none;
   font-size: 18px;
   box-sizing: border-box;
@@ -226,17 +214,14 @@ ul {
   background: none;
   border: none;
   cursor: pointer;
-  font-family: 'Roboto', sans-serif;
   padding: 10px 5px;
   font-size: 18px;
-  line-height: 21px;
   color: #5E6C84;
-  position: relative;
-  top: 2px;
 }
 
 .card__button:disabled {
   opacity: 0.4;
+  cursor: inherit;
 }
 
 .card__button span {
@@ -245,8 +230,6 @@ ul {
 }
 
 .footer {
-  flex: 0 0 auto;
-  width: 100%;
   display: flex;
   justify-content: space-between;
   color: #FFFFFF;
